--- a/src/components/main/main.styles.css
+++ b/src/components/main/main.styles.css
@@ -8,19 +8,23 @@
     padding-left: 1rem;
     padding-top: 1rem;
     padding-right: 0.5rem;
+    padding-bottom: 2rem;
 }
 
 .first-row-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
 }
 
 .second-row-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
 }
 
 .third-row-container {
     display: flex;
     /* justify-content: space-between; */
+    flex-wrap: wrap;
 }
