--- a/src/components/pipe-barchart/pipe-barchart.styles.css
+++ b/src/components/pipe-barchart/pipe-barchart.styles.css
@@ -1,12 +1,12 @@
 .pbc-container {
     height: 350px;
-    width: 80%;
+    width: 74%;
     border: 1px solid #d6d6d6;
     box-shadow: 0 0.3rem 0.5rem 0 #d6d6d6;
     border-radius: 0.7rem;
     background-color: #fff;
     margin-top: 1rem;
-    margin-left: 1rem;
+    margin-left: 1%;
     padding-top: 0.8rem;
     padding-left: 0.8rem;
     padding-bottom: 0.8rem;
@@ -22,9 +22,4 @@
     height: 300px;
     width: 100%;
     padding-top: 1rem;
-    /* padding-left: 3rem; */
 }
-
-/* .pbc-chart canvas {
-    width: 1000rem;
-} */
