--- a/src/components/line-graph/line-graph.styles.css
+++ b/src/components/line-graph/line-graph.styles.css
@@ -84,3 +84,11 @@ h3 {
     text-transform: capitalize;
     font-weight: 300;
 }
+
+@media screen and (max-width: 768px) {
+    .line-container {
+        width: 100%;
+        margin-bottom: 10px;
+        margin-left: 0;
+    }
+}
