--- a/src/components/progress/progress.styles.css
+++ b/src/components/progress/progress.styles.css
@@ -19,8 +19,14 @@
     padding-bottom: 1.5rem;
 }
 
-/* .progress-item:last-of-type {
-    border: none;
+/* 
+.progress-item::before {
+    content: '';
+    position: absolute;
+    height: 50px;
+    width: 2px;
+    background-color: #0e62ff;
+    left: 0;
 } */
 
 .progress-main-header {
@@ -36,7 +42,12 @@
 
 .progress-header {
     font-weight: 750;
+    font-size: 16px;
     /* border-left: 1px solid #eaf2ff; */
+}
+
+ul {
+    list-style-type: none;
 }
 
 .progress-header::before {
@@ -72,4 +83,19 @@
     /* padding-bottom: 1rem; */
     font-size: 11.5px;
     /* border-left: 1px solid #eaf2ff; */
+}
+
+@media screen and (max-width: 768px) {
+    .progress {
+        width: 100%;
+        /* padding-left: 0; */
+    }
+
+    .progress-item::before {
+        right: 18.45rem;
+    }
+
+    .progress-header::before {
+        right: 17.8rem;
+    }
 }
