--- a/src/components/semi-pipe-barchart/semi-pipe-barchart.styles.css
+++ b/src/components/semi-pipe-barchart/semi-pipe-barchart.styles.css
@@ -23,3 +23,14 @@
     width: 100%;
     padding-top: 2rem;
 }
+
+@media screen and (max-width: 768px) {
+    .spbc-container {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .spbc-chart {
+        margin-top: 35px;
+    }
+}
