--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,15 @@
 .main-container {
     width: calc(100% - 250px);
 }
+
+@media screen and (max-width: 768px) {
+    .sidebar-container {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .main-container {
+        width: 100%;
+    }
+}
